--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <div id="image-boxalign">
-	<img src="C:\Users\marti\OneDrive\Images\Moi même.jpg" id="profilepic-circle"alt="Martin LEBEL the magnificent">
+	<img src="moi.jpg" id="profilepic-circle"alt="Martin LEBEL the magnificent">
 </div>
 	
 <div class="paragraph-boxalign">
